--- a/style.css
+++ b/style.css
@@ -73,6 +73,9 @@ footer {
     font-size: 24px;
     margin-right: 30px;
 }
+.logo{
+    width:50px;
+    height:50px;}
 
 .footer-text span {
     color: #850AE5;
